Fixes #2 Solved the problem with the chat history implementing a ConcurrentLinkedDeque instead of a dumb ArrayList, did a little bit of research and I think ConcurrentLinkedDeque is the best implementation for this use, not the only one obvs.